--- a/Tarea5_ACVAZQUEZ.ipynb
+++ b/Tarea5_ACVAZQUEZ.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Fecha:** 08 de Marzo del 2021\n",
     "\n",
-    "**Expediente** : if721470\n",
+    "**Expediente** : if721215\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "\n",
     "### LINK DE GITHUB:https://github.com/ACristinaVV/Tarea5_ACVAZQUEZ\n",
@@ -223,6 +223,7 @@
     }
    ],
    "source": [
+    "#Condiciones del ejercicio\n",
     "n = 10\n",
     "p = 0.7\n",
     "N = 1000\n",
